created basic layout for user list page

--- a/app/modules/User/User.scss
+++ b/app/modules/User/User.scss
@@ -1,6 +1,6 @@
 @import './colors.scss';
 
-.scrapper-page-container {
+.user-page-container {
   display: flex;
   flex-direction: column;
   height: 100%;
