--- a/app/components/atoms/Modal/Modal.scss
+++ b/app/components/atoms/Modal/Modal.scss
@@ -35,11 +35,21 @@
     padding: 2.5em;
     position: relative;
     overflow: auto;
+    box-sizing: border-box;
 
     .modal-body {
       overflow: auto;
       position: relative;
       height: 100%;
     }
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .modal-container .modal-content {
+    padding: 2em 1em;
+    height: 100%;
+    max-height: 100%;
+    margin: 0;
   }
 }
