added lazy image loader

--- a/app/modules/User/User.scss
+++ b/app/modules/User/User.scss
@@ -4,6 +4,11 @@
   height: 100%;
   overflow: auto;
 
+  img {
+    background-color: rgba(0,0,0,0.5);
+    margin: 0 10px;
+  }
+
   .list-container {
     & > div {
       height: 100% !important;
