--- a/app/modules/User/templates/UserDetails.scss
+++ b/app/modules/User/templates/UserDetails.scss
@@ -26,6 +26,10 @@
       font-weight: bold;
     }
 
+    p {
+      margin: 5px 0;
+    }
+
     h3 {
       font-size: 1.1em;
       font-weight: bold;
@@ -39,10 +43,16 @@
       width: 100%;
       flex-wrap: wrap;
 
+      img {
+        width: 62px;
+        height: 62px;
+      }
+
       li {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         margin: 0 10px;
         box-shadow: 0 0 4px 0px rgba(0,0,0,0.4);
         padding: 10px;
