search functionality complete

--- a/app/components/atoms/Modal/Modal.scss
+++ b/app/components/atoms/Modal/Modal.scss
@@ -25,6 +25,7 @@
   }
 
   .modal-content {
+    cursor: default;
     margin: 15% auto;
     background-color: $modal-background;
     border-radius: 4px;
