--- a/app/modules/User/molecules/SearchInput/SearchInput.scss
+++ b/app/modules/User/molecules/SearchInput/SearchInput.scss
@@ -2,10 +2,11 @@
 
 .search-input-container {
   display: flex;
+  margin: 10px 0;
 
   .input-container {
     flex: 1;
-    padding: 0 20px;
+    padding: 0;
     padding-right: 10px;
   }
 
@@ -18,6 +19,7 @@
     display: flex;
     cursor: pointer;
     justify-content: center;
+    padding: 0;
 
     &:hover {
       background: $btn-hover-background;
