--- a/app/modules/User/templates/UserDetails.scss
+++ b/app/modules/User/templates/UserDetails.scss
@@ -53,7 +53,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 0 10px;
+        margin: 10px;
         box-shadow: 0 0 4px 0px rgba(0,0,0,0.4);
         padding: 10px;
       }
