--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -25,10 +25,32 @@ button {
   flex-direction: column;
 }
 
+.container {
+  max-width: 700px;
+}
+
+nav .brand-logo {
+  transform: none;
+  left: 0;
+}
+
 .body-container {
   flex: 1;
   overflow: auto;
   max-width: 700px;
   width: 100%;
   box-sizing: content-box;
+}
+
+@media only screen and (min-width: 500px) {
+  .hide-on-med-and-down {
+    display: block !important;
+  }
+}
+
+@media only screen and (max-width: 499px) {
+  nav .brand-logo {
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
