--- a/app/modules/User/pages/create/UserCreate.scss
+++ b/app/modules/User/pages/create/UserCreate.scss
@@ -1,7 +1,7 @@
 .user-create-page-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  padding: 10px;
   overflow: auto;
 
   .create-form-container {
