--- a/app/modules/User/pages/create/UserCreate.scss
+++ b/app/modules/User/pages/create/UserCreate.scss
@@ -34,6 +34,10 @@
       border-color: #ccc;
       margin-top: 10px;
       box-sizing: border-box;
+
+      &[multiple] {
+        height: 6rem;
+      }
     }
 
     .button-section {
