--- a/app/components/molecules/Header/header.scss
+++ b/app/components/molecules/Header/header.scss
@@ -3,8 +3,9 @@
     padding: 0 32px;
   }
 
-  .icon {
-    margin: 5px 0;
+  .icon span {
+    position: relative;
+    top: 8px;
   }
 
   .sidenav .divider {
