virtual list defect fixing

--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -20,5 +20,7 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
+
 @import '~react-toastify/dist/ReactToastify.css';
+@import '~react-virtualized/styles.css';
 @import './global-styles.scss';
